# zappy

./: .env  .gitignore  Makefile
ai_learning/: Cargo.toml
ai_learning/learning/: train_01.yaml
ai_learning/rust_bricks/: agent.rs
ai_learning/src/: agent.rs  client.rs  main.rs  protocol.rs  state.rs
client/ai_learning/: sample_csv
client/src/: client.rs  protocol.rs  state.rs
gui/: Cargo.toml
gui/assets/models/giant/: model.mtl
gui/core/: Cargo.toml
gui/core/src/: graphic.rs  main.rs  manager.rs  model_loader.rs  module.rs
gui/libs/console/: Cargo.toml
gui/libs/game_view/: Cargo.toml
gui/libs/game_view/src/: lib.rs
gui/libs/obj_viewer/: Cargo.toml
gui/libs/obj_viewer/src/: lib.rs
gui/libs/overlay/: Cargo.toml
gui/wit/: command.wit  graphic.wit  input.wit  system.wit  worlds.wit
poc/: .gitignore  Cargo.toml  Makefile
poc/core/: Cargo.toml
poc/core/src/: main.rs  manager.rs  module.rs  sprite_loader.rs  watcher.rs
poc/libs/bg_manager/: .world
poc/libs/console/: Cargo.toml
poc/libs/cube/: Cargo.toml
poc/libs/overlay/: Cargo.toml
poc/web/frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package.json  tailwind.config.ts
poc/wit/: graphic.wit  input.wit  worlds.wit  zappy.wit
server/: Cargo.toml
server/doc/: SERVER_ARCHI.md
server/src/: client.rs  command.rs  config.rs  constants.rs  main.rs  network.rs  player.rs  protocol.rs  team.rs
server/src/entities/: egg.rs  inventory.rs  mod.rs  player.rs  team.rs
server/src/server/: scheduler.rs
server/src/world/: map.rs  mod.rs  resources.rs
(+30 files in other folders)
