[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
wasmtime = "45.0.0"
wasmtime-wasi = "45.0.0"
anyhow = "1.0.102"
notify = "9.0.0-rc.4"
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dirs = "6.0.0"
image = "0.25.10"
