[package]
name = "game_view"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.57.1"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3"

[package.metadata.component]
package = "local:zappy"

[package.metadata.component.target]
path = "../../wit"
world = "ui-world"
